fix: create release dir before zip, add .gitkeep so git tracks it
The package:zip script failed on GitHub Actions because the release/
directory did not exist on the runner. Added mkdir -p release to the
script and a .gitkeep file so git tracks the directory.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:e2e": "playwright test",
     "lint": "eslint src tests",
     "ci": "npm run typecheck && npm run lint && npm test && npm run build:release",
-    "package:zip": "npm run build:release && rm -f release/slopblock-extension.zip && cd dist && zip -r ../release/slopblock-extension.zip ."
+    "package:zip": "npm run build:release && mkdir -p release && rm -f release/slopblock-extension.zip && cd dist && zip -r ../release/slopblock-extension.zip ."
   },
   "keywords": [],
   "author": "",
